# pr_helper

./: .gitignore  DEPLOYMENT.md  ELECTRON.md  QUICKSTART.md  README.md  api-comparison.md  api-size-comparison.md  build-electron.sh  check-limit.sh  check-rate-limit.sh  graphql-response.json  package-lock.json  package.json  start-electron.sh  start.sh  test-graphql-size.py  test-hybrid-approach.py  test-optimized-graphql.py  test-org-stats.py  test-rest-size.py
.github/workflows/: release.yml
backend/: .env  .env.example  README.md  pr-monitor-backend.spec  pr_backend.spec  pyproject.toml  requirements.txt  requirements_info.txt  run.py  start_server.sh
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/database/: database.py  init_db.py  models.py
backend/app/models/: api_models.py  pr_models.py
backend/app/services/: database_service.py  github_graphql_service.py  github_graphql_service_v2.py  github_service.py  scheduler.py  slack_service.py  token_service.py  websocket_manager.py
backend/app/utils/: logging.py
electron/: main.js  preload.js
frontend/: package-lock.json  package.json
frontend/frontend/: README.md
frontend/public/: index.html
frontend/src/: App.tsx
frontend/src/components/auth/: TokenSetup.tsx
frontend/src/hooks/: useAuth.ts  usePullRequests.ts  useRepositories.ts  useTeamRepositories.ts  useTeams.ts  useWebSocket.ts
frontend/src/services/: api.ts  notifications.ts  websocket.ts
frontend/src/types/: index.ts
frontend/src/utils/: api.ts  electron.ts
(+14 files in other folders)
